Fix slider flag alignment

--- a/frontend/theme/extras/blocks.less
+++ b/frontend/theme/extras/blocks.less
@@ -1158,6 +1158,7 @@ figcaption {
   &.align-right {
     position: absolute;
     top: 50%;
+    right: 0;
     width: 530px;
     padding: 40px;
     background-color: rgba(0, 134, 195, 0.8);
